Add jSpecify node.upload.mqtt package.